# RomTrimmer

./: CMakeLists.txt  Install.sh  README.md  RomTrimmer.cbp  RomTrimmer.depend  romtrimmerpp.cbp  romtrimmerpp.layout
.github/workflows/: build.yml
docker/: Dockerfile
docs/: USAGE.md
example/: batch_trim.sh  compare_with_ucon64.sh  monitor_trim.sh  python_integration.py  romtrimmer_wrapper.py  trim_all.sh
include/: AlgorithmComparator.hpp  ChecksumVerifier.hpp  ConfigManager.hpp  DatIntegration.hpp  Localization.hpp  LocalizationManager.hpp  Logger.hpp  PaddingAnalyzer.hpp  PluginSystem.hpp  ReversePadding.hpp  RomDetector.hpp  RomTrimmer.hpp  SafetyValidator.hpp  ThreadPool.hpp  TrimOptions.hpp  Ucon64Integration.hpp  ValidationResult.hpp  Version.hpp  romtrimmer_c.h
src/: .~lock.RomTrimmer.cpp#  Benchmark.cpp  ConfigManager.cpp  DatIntegration.cpp  LocalizationManager.cpp  Logger.cpp  PaddingAnalyzer.cpp  ReversePadding.cpp  RomDetector.cpp  RomTrimmer.cpp  SafetyValidator.cpp  ThreadPool.cpp  Ucon64Integration.cpp  main.cpp  romtrimmer_c.cpp
tests/: test_basic.cpp
